[gd_scene load_steps=20 format=2]

[ext_resource path="res://free-assets/fonts/Balsamiq/BalsamiqSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Settings.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 42
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[node name="PauseMenu" type="Control"]
pause_mode = 2
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 790.0
margin_top = 370.0
margin_right = 1090.0
margin_bottom = 670.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Menu/VBoxContainer"]
margin_right = 300.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_hover = Color( 1, 0.92549, 0.811765, 1 )
text = "Continue"
flat = true

[node name="Settings" type="Button" parent="Menu/VBoxContainer"]
margin_top = 104.0
margin_right = 300.0
margin_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_hover = Color( 1, 0.92549, 0.811765, 1 )
text = "Settings"

[node name="Exit" type="Button" parent="Menu/VBoxContainer"]
margin_top = 208.0
margin_right = 300.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_hover = Color( 1, 0.92549, 0.811765, 1 )
text = "Exit"
flat = true

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="pressed" from="Menu/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
